{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 45,
  "lineage": "f2ade4e7-3a3b-e889-def2-7762d9d1f96a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/test-uece-18/zones/us-central1-c/instanceGroups/l7-xlb-mig1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-07-25T18:45:48.266-07:00",
            "custom_request_headers": [
              "X-Client-Geo-Location: {client_region_subdivision}, {client_city}"
            ],
            "custom_response_headers": [
              "X-Cache-Hit: {cdn_cache_status}"
            ],
            "enable_cdn": true,
            "fingerprint": "XFQ_IDRA2pY=",
            "generated_id": 4926699616156467491,
            "health_checks": [
              "projects/test-uece-18/global/healthChecks/l7-xlb-hc"
            ],
            "id": "projects/test-uece-18/global/backendServices/l7-xlb-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "l7-xlb-backend-service",
            "port_name": "my-port",
            "project": "test-uece-18",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-uece-18/global/backendServices/l7-xlb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-07-25T18:45:00.151-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/test-uece-18/global/firewalls/l7-xlb-fw-allow-hc",
            "log_config": [],
            "name": "l7-xlb-fw-allow-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/test-uece-18/global/networks/l7-xlb-network",
            "priority": 1000,
            "project": "test-uece-18",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-uece-18/global/firewalls/l7-xlb-fw-allow-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.49.169.222",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-07-25T18:44:48.070-07:00",
            "id": "projects/test-uece-18/global/addresses/l7-xlb-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "l7-xlb-static-ip",
            "prefix_length": 0,
            "project": "test-uece-18",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-uece-18/global/addresses/l7-xlb-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/test-uece-18/global/forwardingRules/l7-xlb-forwarding-rule",
            "ip_address": "34.49.169.222",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "l7-xlb-forwarding-rule",
            "port_range": "80-80",
            "project": "test-uece-18",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-uece-18/global/forwardingRules/l7-xlb-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/test-uece-18/global/targetHttpProxies/l7-xlb-target-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_global_address.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_network.default",
            "google_compute_subnetwork.default",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/test-uece-18/global/networks/l7-xlb-network",
            "mtu": 0,
            "name": "l7-xlb-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "test-uece-18",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-uece-18/global/networks/l7-xlb-network"
          },
          "create_before_destroy": true
        },
        {
          "deposed": "9301cdaa",
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "description": "Default network for the project",
            "enable_ula_internal_ipv6": false,
            "id": "projects/test-uece-18/global/networks/default",
            "mtu": 0,
            "name": "default",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "test-uece-18",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-uece-18/global/networks/default",
            "timeouts": {
            }
          },
          "create_before_destroy": true
        },
        {
          "deposed": "9bbb7734",
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/test-uece-18/global/networks/my-network",
            "mtu": 0,
            "name": "my-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "test-uece-18",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-uece-18/global/networks/my-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-25T18:45:01.112-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/test-uece-18/regions/us-central1/subnetworks/l7-xlb-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "l7-xlb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/test-uece-18/global/networks/l7-xlb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "test-uece-18",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-uece-18/regions/us-central1/subnetworks/l7-xlb-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.default"
          ],
          "create_before_destroy": true
        },
        {
          "deposed": "635af735",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-18T17:09:16.230-07:00",
            "gateway_address": "10.128.0.1",
            "id": "projects/test-uece-18/regions/us-central1/subnetworks/default",
            "ip_cidr_range": "10.128.0.0/20",
            "name": "default",
            "network": "https://www.googleapis.com/compute/v1/projects/test-uece-18/global/networks/default",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "test-uece-18",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-uece-18/regions/us-central1/subnetworks/default",
            "stack_type": "IPV4_ONLY",
            "timeouts": {
            }
          },
          "dependencies": [
            "google_compute_network.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-25T18:46:36.812-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/test-uece-18/global/targetHttpProxies/l7-xlb-target-http-proxy",
            "name": "l7-xlb-target-http-proxy",
            "project": "test-uece-18",
            "proxy_bind": false,
            "proxy_id": 1220418495004492051,
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-uece-18/global/targetHttpProxies/l7-xlb-target-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/test-uece-18/global/urlMaps/l7-xlb-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_network.default",
            "google_compute_subnetwork.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-25T18:46:33.320-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/test-uece-18/global/backendServices/l7-xlb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "h8BCd4mwubE=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/test-uece-18/global/urlMaps/l7-xlb-url-map",
            "map_id": 1001297694583374102,
            "name": "l7-xlb-url-map",
            "path_matcher": [],
            "project": "test-uece-18",
            "self_link": "https://www.googleapis.com/compute/v1/projects/test-uece-18/global/urlMaps/l7-xlb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.default",
            "google_compute_network.default",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}